--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "mysql2": "^3.5.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "path": "^0.12.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-node-express": "^2.1.3",
+    "swagger-ui-express": "^5.0.0"
   }
 }
