--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jose": "^4.14.4",
-    "md5": "^2.3.0",
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "mysql2": "^3.5.2",
     "nodemon": "^3.0.1",
     "path": "^0.12.7",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-node-express": "^2.1.3",
+    "swagger-node-express": "^1.2.3",
     "swagger-ui-express": "^5.0.0"
   }
 }
