--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bash": "^0.0.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -18,8 +19,10 @@
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "mysql2": "^3.5.2",
+    "node-cron": "^3.0.2",
     "nodemon": "^3.0.1",
     "path": "^0.12.7",
+    "sequelize": "^6.32.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-node-express": "^1.2.3",
     "swagger-ui-express": "^5.0.0"
