--- a/package.json
+++ b/package.json
@@ -15,16 +15,22 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
+    "express-http-context": "^1.2.4",
+    "fs": "^0.0.1-security",
     "jose": "^4.14.4",
+    "mime": "^3.0.0",
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "mysql2": "^3.5.2",
     "node-cron": "^3.0.2",
     "nodemon": "^3.0.1",
     "path": "^0.12.7",
+    "regression": "^2.0.1",
     "sequelize": "^6.32.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-node-express": "^1.2.3",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "tedious": "^16.4.0"
   }
 }
